Changes the deprecated newInstance() in the 'Class' class to the one in the 'Constructor' class.