@@ -95,7 +95,7 @@ public class ConfigurationBuilder implements Configuration {
             }
             else if (param instanceof Class) {
                 if (Scanner.class.isAssignableFrom((Class) param)) {
-                    try { builder.addScanners(((Scanner) ((Class) param).newInstance())); } catch (Exception e) { /*fallback*/ }
+                    try { builder.addScanners(((Scanner) ((Class) param).getConstructor().newInstance())); } catch (Exception e) { /*fallback*/ }
                 }
                 builder.addUrls(ClasspathHelper.forClass((Class) param, classLoaders));
                 filter.includePackage(((Class) param));
